--- a/index.html
+++ b/index.html
@@ -3,89 +3,76 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Vertical Pulse Lines — 5-Line (Yellow Down/Up + Pauses)</title>
-
+<title>Vertical Pulse Lines — Alternate (Down ↔ Up)</title>
 <style>
   /* Reset */
-  * { margin: 0; padding: 0; box-sizing: border-box; }
-
-  html, body { height: 100%; }
+  *{margin:0;padding:0;box-sizing:border-box}
+  html,body{height:100%}
   body{
-    display: table;
-    width: 100%;
-    height: 100%;
-    background-color: #171717;  /* dark background */
-    color: #000;
-    line-height: 1.6;
-    position: relative;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    overflow: hidden;            /* hide pulses as they leave viewport */
+    display:table;width:100%;height:100%;
+    background:#171717; color:#000; line-height:1.6;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    overflow:hidden;
   }
 
-  /* Field of lines (unchanged layout) */
-  .lines {
-    position: absolute;
-    top: 0; left: 0; right: 0;
-    height: 100%;
-    margin: auto;
-    width: 90vw;
+  /* Field of lines */
+  .lines{
+    position:absolute; top:0; left:0; right:0; height:100%;
+    margin:auto; width:90vw;
   }
 
-  /* Single line (unchanged) */
-  .line {
-    position: absolute;
-    width: 1px;
-    height: 100%;
-    top: 0;
-    left: 50%;
-    background: rgba(255,255,255,0.16);
-    overflow: hidden;
+  /* Single line */
+  .line{
+    position:absolute; top:0; left:50%;
+    width:1px; height:100%;
+    background:rgba(255,255,255,0.16);
+    overflow:hidden;
   }
 
-  /* Yellow traveling pulse — now down → pause → up → pause */
+  /* Yellow traveling pulse — down then up (no pauses) */
   .line::after{
-    content: '';
-    position: absolute;
-    left: 0; width: 100%;
-    height: 20vh;                /* slightly longer so it reads */
-    top: -50%;
-    background: linear-gradient(
+    content:''; position:absolute; left:0; width:100%;
+    height:18vh;                 /* pulse length */
+    top:-50%;                    /* start above */
+    background:linear-gradient(
       to bottom,
       rgba(255,255,255,0) 0%,
       rgba(255,255,255,.70) 22%,
       #FFD400 70%,
       rgba(255,212,0,.28) 100%
     );
-    filter: blur(18px);
-    animation: dropRise 12s cubic-bezier(0.4, 0.26, 0, 0.97) infinite both;
+    filter:blur(18px);
+    animation-name: drop;
+    animation-duration: 9s;      /* speed */
+    animation-timing-function: cubic-bezier(.4,.26,0,.97);
+    animation-iteration-count: infinite;
+    animation-direction: alternate; /* ↓ then ↑, no pauses */
+    animation-fill-mode: both;
   }
 
-  /* Position the 5 lines around the center (unchanged idea) */
-  .line:nth-child(1){ margin-left: -40%; }  /* far left  */
-  .line:nth-child(2){ margin-left: -20%; }  /* left      */
-  .line:nth-child(3){ margin-left:   0%; }  /* center    */
-  .line:nth-child(4){ margin-left:  20%; }  /* right     */
-  .line:nth-child(5){ margin-left:  40%; }  /* far right */
+  /* Position the 5 lines around center */
+  .line:nth-child(1){ margin-left:-40%; }
+  .line:nth-child(2){ margin-left:-20%; }
+  .line:nth-child(3){ margin-left:  0%; }
+  .line:nth-child(4){ margin-left: 20%; }
+  .line:nth-child(5){ margin-left: 40%; }
 
-  /* Stagger pulse starts (same style you used) */
-  .line:nth-child(1)::after{ animation-delay: 1.6s; }
-  .line:nth-child(2)::after{ animation-delay: 2.0s; }
-  .line:nth-child(3)::after{ animation-delay: 2.3s; }
-  .line:nth-child(4)::after{ animation-delay: 2.6s; }
-  .line:nth-child(5)::after{ animation-delay: 2.9s; }
+  /* Staggered starts */
+  .line:nth-child(1)::after{ animation-delay: 1.6s }
+  .line:nth-child(2)::after{ animation-delay: 2.0s }
+  .line:nth-child(3)::after{ animation-delay: 2.3s }
+  .line:nth-child(4)::after{ animation-delay: 2.6s }
+  .line:nth-child(5)::after{ animation-delay: 2.9s }
 
-  /* Down → pause → Up → pause (percent-based like your original) */
-  @keyframes dropRise {
-    0%   { top: -50%; }   /* start above */
-    40%  { top: 110%; }   /* fall */
-    50%  { top: 110%; }   /* pause at bottom */
-    90%  { top: -50%; }   /* rise */
-    100% { top: -50%; }   /* pause at top */
+  /* Your original drop keyframes */
+  @keyframes drop {
+    0%   { top:-50%; }
+    100% { top:110%; }
   }
 
-  /* Optional: if your OS has “reduce motion” on and you still want this, delete this block */
+  /* Optional: disable if user prefers reduced motion */
   @media (prefers-reduced-motion: reduce){
-    .line::after{ animation: none !important; }
+    .line::after{ animation:none !important }
   }
 </style>
 </head>
