--- a/index.html
+++ b/index.html
@@ -3,89 +3,108 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Vertical Pulse Lines — Alternate (Down ↔ Up)</title>
+<title>Vertical Pulse Lines — 5-Line Version</title>
+
+<!-- Animate.css (v4) -->
+<link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 <style>
   /* Reset */
-  *{margin:0;padding:0;box-sizing:border-box}
-  html,body{height:100%}
+  * { margin: 0; padding: 0; box-sizing: border-box; }
+
+  html, body { height: 100%; }
   body{
-    display:table;width:100%;height:100%;
-    background:#171717; color:#000; line-height:1.6;
-    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-    overflow:hidden;
+    display: table;
+    width: 100%;
+    height: 100%;
+    background-color: #171717;  /* dark background */
+    color: #000;
+    line-height: 1.6;
+    position: relative;
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    overflow: hidden;            /* hide pulses as they leave viewport */
   }
 
   /* Field of lines */
   .lines{
-    position:absolute; top:0; left:0; right:0; height:100%;
-    margin:auto; width:90vw;
+    position: absolute;
+    inset: 0 auto 0 auto;
+    height: 100%;
+    margin: auto;
+    width: 90vw;                 /* adjust field width if you want wider/narrower */
   }
 
   /* Single line */
   .line{
-    position:absolute; top:0; left:50%;
-    width:1px; height:100%;
-    background:rgba(255,255,255,0.16);
-    overflow:hidden;
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    left: 50%;
+    background: rgba(255,255,255,0.12);
+    overflow: hidden;
   }
 
-  /* Yellow traveling pulse — down then up (no pauses) */
+  /* Traveling pulse */
   .line::after{
-    content:''; position:absolute; left:0; width:100%;
-    height:18vh;                 /* pulse length */
-    top:-50%;                    /* start above */
-    background:linear-gradient(
+    content: '';
+    position: absolute;
+    left: 0; width: 100%;
+    height: 15vh;                /* pulse length */
+    top: -50%;                   /* start above */
+    background: linear-gradient(
       to bottom,
       rgba(255,255,255,0) 0%,
-      rgba(255,255,255,.70) 22%,
-      #FFD400 70%,
-      rgba(255,212,0,.28) 100%
+      #ffffff 75%,
+      #ffffff 100%
     );
-    filter:blur(18px);
     animation-name: drop;
-    animation-duration: 9s;      /* speed */
-    animation-timing-function: cubic-bezier(.4,.26,0,.97);
+    animation-duration: 7s;
+    animation-delay: 0s;
     animation-iteration-count: infinite;
-    animation-direction: alternate; /* ↓ then ↑, no pauses */
-    animation-fill-mode: both;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
   }
 
-  /* Position the 5 lines around center */
-  .line:nth-child(1){ margin-left:-40%; }
-  .line:nth-child(2){ margin-left:-20%; }
-  .line:nth-child(3){ margin-left:  0%; }
-  .line:nth-child(4){ margin-left: 20%; }
-  .line:nth-child(5){ margin-left: 40%; }
+  /* Position the 5 lines around the center */
+  .line:nth-child(1){ margin-left: -40%; }  /* far left  */
+  .line:nth-child(2){ margin-left: -20%; }  /* left      */
+  .line:nth-child(3){ margin-left:   0%; }  /* center    */
+  .line:nth-child(4){ margin-left:  20%; }  /* right     */
+  .line:nth-child(5){ margin-left:  40%; }  /* far right */
 
-  /* Staggered starts */
-  .line:nth-child(1)::after{ animation-delay: 1.6s }
-  .line:nth-child(2)::after{ animation-delay: 2.0s }
-  .line:nth-child(3)::after{ animation-delay: 2.3s }
-  .line:nth-child(4)::after{ animation-delay: 2.6s }
-  .line:nth-child(5)::after{ animation-delay: 2.9s }
+  /* Stagger pulse start times for variety */
+  .line:nth-child(1)::after{ animation-delay: 1.6s; }
+  .line:nth-child(2)::after{ animation-delay: 2.0s; }
+  .line:nth-child(3)::after{ animation-delay: 2.3s; }
+  .line:nth-child(4)::after{ animation-delay: 2.6s; }
+  .line:nth-child(5)::after{ animation-delay: 2.9s; }
 
-  /* Your original drop keyframes */
   @keyframes drop {
-    0%   { top:-50%; }
-    100% { top:110%; }
+    0%   { top: -50%; }
+    100% { top: 110%; }
   }
 
-  /* Optional: disable if user prefers reduced motion */
+  /* Respect reduced motion */
   @media (prefers-reduced-motion: reduce){
-    .line::after{ animation:none !important }
+    .line::after{ animation: none !important; }
   }
 </style>
 </head>
 <body>
 
-  <div class="lines" aria-hidden="true">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
+  <!-- Animate.css entrance effects (optional) -->
+  <div class="lines animate__animated animate__fadeIn animate__slower"
+       style="--animate-duration:1.6s;">
+    <div class="line animate__animated animate__fadeInLeft"  style="--animate-delay:.10s;"></div>
+    <div class="line animate__animated animate__fadeInLeft"  style="--animate-delay:.20s;"></div>
+    <div class="line animate__animated animate__fadeInDown"  style="--animate-delay:.30s;"></div>
+    <div class="line animate__animated animate__fadeInRight" style="--animate-delay:.40s;"></div>
+    <div class="line animate__animated animate__fadeInRight" style="--animate-delay:.50s;"></div>
   </div>
 
 </body>
 </html>
+
 
